refactor: 🗑️ Decluttering in progress

--- a/src/_includes/partials/site-footer.njk
+++ b/src/_includes/partials/site-footer.njk
@@ -10,6 +10,6 @@
         </div>
     </nav>
     <small>
-        © 2022 Yannick Nana. Powered by Notion / Eleventy / GitHub / Netlify / Coffee
+        © 2022 - {{ helpers.currentYear() }} Yannick Nana. Powered by Notion / Eleventy / GitHub / Netlify / Coffee
     </small>
 </footer>
