--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -1,3 +1,5 @@
 <header class="measured-container" data-layout="cluster" data-props="y:center x:between">
-    <a data-heading="5" data-props="y:center" data-button="text" href="/">{{ meta.site_name }}</a>
+    <a data-heading="3" data-props="y:center" data-button="text" href="/">
+        <span class="visually-hidden">{{ meta.site_name }}</span>
+    </a>
 </header>
