--- a/src/_includes/partials/reference-item.njk
+++ b/src/_includes/partials/reference-item.njk
@@ -1,8 +1,5 @@
 <li class="reference-item" data-props="noMeasure">
     <a rel="noopener nofollow noreferrer" data-button="link" target="{{ '_blank' if reference.url }}" href="{{ (reference.url if reference.url else '#') }}">
-        <b>
-            {{ reference.name }}
-        </b>
+        {{ reference.name }} - {{ reference.cite if reference.cite }}
     </a>
-    | {{ reference.cite if reference.cite }}
 </li>
