--- a/src/assets/styles/_globals.css
+++ b/src/assets/styles/_globals.css
@@ -18,8 +18,8 @@ h3,
 h4,
 h5,
 h6 {
-  line-height: 1.2;
   --measure: 40ch;
+  line-height: 1.2;
   font-weight: bold;
 }
 h1,
@@ -82,14 +82,55 @@ ol[role="list"] {
   padding-left: var(--padding, initial);
 }
 
+ol {
+  --space: var(--space-s);
+  --threshold: 30rem;
+  display: flex;
+  flex-wrap: wrap;
+  gap: var(--space);
+  justify-content: var(--horizontal-alignment, flex-start);
+  list-style-type: none;
+  counter-reset: items;
+  padding-left: 0;
+}
+
+ol > li {
+  flex-grow: 1;
+  flex-basis: calc((var(--threshold) - 100%) * 999);
+  position: relative;
+  font-size: var(--step--1);
+}
+ol > li::before {
+  counter-increment: items;
+  content: counter(items);
+  font-weight: bold;
+  display: block;
+  color: var(--color-dark-accent);
+  border-bottom: var(--border-thick) solid var(--color-dark-accent);
+  padding-bottom: var(--space-2xs);
+  margin-bottom: var(--space-2xs);
+}
+ol > li:nth-child(n + 4),
+ol > li:nth-child(n + 4) ~ * {
+  /* Switch to a vertical configuration if there are more than 4 child elements */
+  flex-basis: 100%;
+}
+
+blockquote {
+  border-left: var(--border-thick) solid var(--color-dark);
+  background-color: var(--color-light-accent);
+  padding: var(--space-2xs) var(--space-s);
+  width: fit-content;
+}
+
 :root {
-  --page-top: var(--space-m, 12rem);
+  --page-top: var(--space-m, 6rem);
   --header-height: var(--space-3xl);
   --responsive-padding: var(--space-s-3xl);
 }
 
 .measured-container {
-  max-width: var(--measure, 80ch);
+  max-width: var(--measure);
   width: 100%;
   margin-left: auto;
   margin-right: auto;
@@ -113,14 +154,13 @@ textarea {
   min-height: var(--controls-minimum-height);
   padding-left: var(--space-2xs);
   padding-right: var(--space-2xs);
-  border: var(--border-thin) solid;
-  border-color: var(--gray-600);
+  border: var(--border-thick) solid;
+  border-color: var(--color-dark-accent);
   border-radius: var(--border-radius);
   width: 100%;
 }
 
 pre {
-  color: var(--gray-25);
   background-color: var(--color-light-accent);
   padding: var(--space-2xs);
   margin: var(--space-2xs) 0 var(--space-s);
@@ -135,13 +175,10 @@ code {
   padding: calc(var(--space-2xs) * 0.75) var(--space-2xs);
   border-radius: 5px;
   background-color: var(--color-light-accent);
-
-
 }
 
 pre code {
   padding: 0;
   border: none;
   background-color: var(--color-light-accent);
-
 }
