--- a/src/content/home-page.njk
+++ b/src/content/home-page.njk
@@ -1,6 +1,7 @@
 ---
 layout: layouts/home-layout.njk
-hero_description: Collection of research findings and insights for building better user interfaces.
+hero_title: Build better interfaces
+hero_description: Frontend Stories is a collection of research findings and insights about web develoment.
 pagination: 
     data: collections.categoriesAndAll
     size: 1
@@ -11,41 +12,32 @@ eleventyComputed:
     description: "{{meta.site_description}} Home - {{currentCategory}}"
     eleventyNavigation:
         key: Home
-        title: Home
+        title: Back to home
 ---
 
-<section>
-    <hgroup data-layout="stack" data-props="space:xs">
-        <h1 data-heading="1">
-            <span class="visually-hidden">{{ meta.site_name }} | </span>
-            <span> {{ "Home" if currentCategory == 'All' else currentCategory }}</span>
-        </h1>
-        <p>{{ hero_description or meta.site_description }}</p>
-    </hgroup>
-</section>
-<section id="findings">
-    <h2 class="visually-hidden" id="categories-title" data-heading="3">Topics</h2>
-    <nav class="categories-navigation" aria-labelledby="categories-title">
-        <ul role="list" data-layout="cluster" data-props="noPad">
-            {%- for category in collections.categoriesAndAll %}
-                {% set category_url = '' if category == 'All' else category | slugify %}
-                <li data-layout="stack" data-active="{{ 'true' if currentCategory == category else 'false' }}">
-                    {% set isActive = 'active' if currentCategory == category%}
-                    <a
-                        data-props="x:center"
-                        data-button="{{ isActive }} tag small"
-                        href="/{{ category_url }}">{{ 'All' if category == 'All' else category }}</a>
-                </li>
-            {% endfor -%}
-        </ul>
-    </nav>
-    <h3 data-heading="5" class="visually-hidden">
-        {{ "All" if currentCategory == 'All' else currentCategory }}
-    </h3>
-    <ul data-layout="stack" data-props="space:s" >
-        {%- set entries = collections.stories | filterByCategory(currentCategory) | limit(50) -%}
-        {%- for entry in entries %}
-            {% include "partials/story-card-entry.njk" %}
+<hgroup data-layout="slice">
+    <h1>
+        {{ hero_title }}
+    </h1>
+    <p>{{ hero_description or meta.site_description }}</p>
+</hgroup>
+<nav class="categories-navigation" aria-labelledby="Navigate by topics">
+    <ul role="list" data-layout="cluster" data-props="noPad">
+        {%- for category in collections.categoriesAndAll %}
+            {% set category_url = '' if category == 'All' else category | slugify %}
+            <li data-layout="stack" data-active="{{ 'true' if currentCategory == category else 'false' }}">
+                {% set isActive = 'active' if currentCategory == category %}
+                <a data-props="x:center" data-button="{{ isActive }} tag small" href="/{{ category_url }}">{{ 'All' if category == 'All' else category }}</a>
+            </li>
         {% endfor -%}
     </ul>
-</section>
+</nav>
+<h2>
+    {{ "Latest" if currentCategory == 'All' else currentCategory }}
+</h2>
+<ul data-layout="stack" role="list" data-props="space:s">
+    {%- set entries = collections.stories | filterByCategory(currentCategory) | limit(50) -%}
+    {%- for entry in entries %}
+        {% include "partials/story-card-entry.njk" %}
+    {% endfor -%}
+</ul>
