feat: 🎨 Georgia font

--- a/src/_includes/layouts/story-layout.njk
+++ b/src/_includes/layouts/story-layout.njk
@@ -1,6 +1,6 @@
 {% block content %}
     {% include "partials/site-breadcrumbs.njk" %}
-        <article class="measured-container" itemscope itemtype="http://schema.org/Article" data-layout="stack" data-props="recursive space:flow x:start" >
+        <article itemscope itemtype="http://schema.org/Article" data-layout="stack" data-props="recursive space:flow x:start" >
             {% block article %}{% endblock %}
         </article>
 {% endblock %}
