--- a/src/content/home-page.njk
+++ b/src/content/home-page.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/home-layout.njk
-hero_title: Build better interfaces
-hero_description: Frontend Stories is a collection of research findings and insights about web develoment.
+hero_title: Selection of research findings related to web development
+hero_description: Frontend Stories is a collection of research findings and insights about web development.
 pagination: 
     data: collections.categoriesAndAll
     size: 1
@@ -19,7 +19,7 @@ eleventyComputed:
     <h1>
         {{ hero_title }}
     </h1>
-    <p>{{ hero_description or meta.site_description }}</p>
+    {# <p>{{ hero_description or meta.site_description }}</p> #}
 </hgroup>
 <nav class="categories-navigation" aria-labelledby="Navigate by topics">
     <ul role="list" data-layout="cluster" data-props="noPad">
