--- a/src/assets/styles/_globals.css
+++ b/src/assets/styles/_globals.css
@@ -7,7 +7,7 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  font-family: var(--font-serif);
+  font-family: var(--font-sans-serif);
   font-size: var(--step-0);
   background-color: var(--color-light);
   color: var(--color-dark);
