--- a/src/_includes/layouts/base-layout.njk
+++ b/src/_includes/layouts/base-layout.njk
@@ -2,7 +2,7 @@
 <html lang="en">
     {% include "partials/site-head.njk" %}
     <body>
-        {# {% include "partials/site-header.njk" %} #}
+        {% include "partials/site-header.njk" %}
         <main id="main-content" class="measured-container" data-layout="stack" data-props="x:stretch space:l">
             {% block content %}
                 {{ content | safe }}
