--- a/src/assets/styles/_globals.css
+++ b/src/assets/styles/_globals.css
@@ -7,7 +7,7 @@ html {
   scroll-behavior: smooth;
 }
 body {
-  font-family: var(--font-sans-serif);
+  font-family: var(--font-serif);
   font-size: var(--step-0);
   background-color: var(--color-light);
   color: var(--color-dark);
@@ -20,7 +20,9 @@ h5,
 h6 {
   --measure: 40ch;
   line-height: 1.2;
-  font-weight: bold;
+  font-weight: normal;
+  font-family: var(--font-sans-serif);
+
 }
 h1,
 [data-heading~="1"] {
