chore: Trimming project layouts

--- a/src/_includes/partials/site-breadcrumbs.njk
+++ b/src/_includes/partials/site-breadcrumbs.njk
@@ -5,7 +5,7 @@
         <ul data-layout="cluster" data-props="space:2xs">
             {%- for entry in navPages %}
                 <li {% if entry.url == page.url %} class="my-active-class" {% endif %}>
-                    <a data-button="link" href="{{ entry.url }}">{{ entry.title }}</a>
+                    <a data-button="tag small" href="{{ entry.url }}">{{ entry.title }}</a>
                 </li>
             {%- endfor %}
         </ul>
