--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -1,5 +1,5 @@
-<header class="measured-container" data-layout="cluster" data-props="y:center x:between">
+{# <header class="measured-container" data-layout="cluster" data-props="y:center x:between">
     <a data-heading="3" data-props="y:center" data-button="text" href="/">
         <span class="visually-hidden">{{ meta.site_name }}</span>
     </a>
-</header>
+</header> #}
