--- a/src/_includes/partials/story-card-entry.njk
+++ b/src/_includes/partials/story-card-entry.njk
@@ -1,10 +1,10 @@
 <li data-props="noMeasure">
     <article itemscope="itemscope" itemtype="http://schema.org/Article">
-        <a data-heading="5" itemprop="url" data-button="text" href="/{{ entry.slug }}">
-        <b>{{ entry.name }}</b></a>
+        <a itemprop="url" data-button="link" href="/{{ entry.slug }}">
+            {{ entry.name }}</a>
         {# <p>
-            <time itemprop="dateModified" datetime="{{ story.edited }}">{{entry.edited | readableDate}}</time>
-        </p> #}
+                    <time itemprop="dateModified" datetime="{{ story.edited }}">{{entry.edited | readableDate}}</time>
+                </p> #}
         <meta itemprop="headline" content="{{ entry.name }}"/>
     </article>
 </li>
