--- a/src/assets/styles/_fonts.css
+++ b/src/assets/styles/_fonts.css
@@ -1,16 +1,64 @@
-:root{
-     --font-sans-serif: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial, sans-serif;
-     --font-serif: "Georgia", "Apple Garamond",  "Times New Roman", "Baskerville", "Droid Serif", "Times","Source Serif Pro", serif;
-     --font-monospace: Menlo, Consolas, Monaco, Liberation Mono, Lucida Console, monospace;
-     --font-emoji-filter: sepia(1) saturate(2) grayscale(0.5) hue-rotate(calc(var(--primary-hue) * 1deg - 50deg ));
+/* literata-regular - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Literata";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/literata-v30-latin-regular.woff2") format("woff2"),
+    /* Chrome 36+, Opera 23+, Firefox 39+ */
+      url("../fonts/literata-v30-latin-regular.woff") format("woff"); /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* literata-700 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "Literata";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/literata-v30-latin-700.woff2") format("woff2"),
+    /* Chrome 36+, Opera 23+, Firefox 39+ */
+      url("../fonts/literata-v30-latin-700.woff") format("woff"); /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* ibm-plex-sans-condensed-regular - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "IBM Plex Sans Condensed";
+  font-style: normal;
+  font-weight: 400;
+  src: url("../fonts/ibm-plex-sans-condensed-v13-latin-regular.woff2")
+      format("woff2"),
+    /* Chrome 36+, Opera 23+, Firefox 39+ */
+      url("../fonts/ibm-plex-sans-condensed-v13-latin-regular.woff")
+      format("woff"); /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+/* ibm-plex-sans-condensed-700 - latin */
+@font-face {
+  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+  font-family: "IBM Plex Sans Condensed";
+  font-style: normal;
+  font-weight: 700;
+  src: url("../fonts/ibm-plex-sans-condensed-v13-latin-700.woff2")
+      format("woff2"),
+    /* Chrome 36+, Opera 23+, Firefox 39+ */
+      url("../fonts/ibm-plex-sans-condensed-v13-latin-700.woff") format("woff"); /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+ */
+}
+:root {
+  --font-sans-serif: "IBM Plex Sans Condensed", "-apple-system",
+    "BlinkMacSystemFont", "avenir next", "avenir", "segoe ui", "helvetica neue",
+    "helvetica", "Cantarell", "Ubuntu", "roboto", "noto", arial, sans-serif;
+  --font-serif: "Literata", "Georgia", "Apple Garamond", "Times New Roman",
+    "Baskerville", "Droid Serif", "Times", "Source Serif Pro", serif;
+  --font-monospace: "Menlo", "Consolas", "Monaco", "Liberation Mono",
+    "Lucida Console", monospace;
+  --font-emoji-filter: sepia(1) saturate(2) grayscale(0.5)
+    hue-rotate(calc(var(--primary-hue) * 1deg - 50deg));
 }
 
-[data-font="emoji"]{
-     filter: var(--font-emoji-filter);
+[data-font="emoji"] {
+  filter: var(--font-emoji-filter);
 }
-[data-font="serif"]{
-     font-family: var(--font-serif);
+[data-font="serif"] {
+  font-family: var(--font-serif);
 }
-[data-font="sans-serif"]{
-     font-family: var(--font-sans-serif);
+[data-font="sans-serif"] {
+  font-family: var(--font-sans-serif);
 }
