--- a/src/assets/styles/_tokens.css
+++ b/src/assets/styles/_tokens.css
@@ -1,14 +1,25 @@
 :root {
   /* @link https://utopia.fyi/type/calculator?c=320,16,1.125,1200,20,1.2,6,1,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l */
 
-  --step--1: clamp(0.89rem, calc(0.83rem + 0.28vw), 1.04rem);
+  /* --step--1: clamp(0.89rem, calc(0.83rem + 0.28vw), 1.04rem);
   --step-0: clamp(1rem, calc(0.91rem + 0.45vw), 1.25rem);
   --step-1: clamp(1.13rem, calc(0.99rem + 0.68vw), 1.5rem);
   --step-2: clamp(1.27rem, calc(1.07rem + 0.97vw), 1.8rem);
   --step-3: clamp(1.42rem, calc(1.16rem + 1.34vw), 2.16rem);
   --step-4: clamp(1.6rem, calc(1.24rem + 1.8vw), 2.59rem);
   --step-5: clamp(1.8rem, calc(1.33rem + 2.38vw), 3.11rem);
-  --step-6: clamp(2.03rem, calc(1.41rem + 3.1vw), 3.73rem);
+  --step-6: clamp(2.03rem, calc(1.41rem + 3.1vw), 3.73rem); */
+
+  /* @link https://utopia.fyi/type/calculator?c=320,16,1.125,1200,18,1.125,6,1,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
+
+  --step--1: clamp(0.89rem, calc(0.85rem + 0.20vw), 1.00rem);
+  --step-0: clamp(1.00rem, calc(0.95rem + 0.23vw), 1.13rem);
+  --step-1: clamp(1.13rem, calc(1.07rem + 0.26vw), 1.27rem);
+  --step-2: clamp(1.27rem, calc(1.21rem + 0.29vw), 1.42rem);
+  --step-3: clamp(1.42rem, calc(1.36rem + 0.32vw), 1.60rem);
+  --step-4: clamp(1.60rem, calc(1.53rem + 0.36vw), 1.80rem);
+  --step-5: clamp(1.80rem, calc(1.72rem + 0.41vw), 2.03rem);
+  --step-6: clamp(2.03rem, calc(1.94rem + 0.46vw), 2.28rem);
 
   /* @link https://utopia.fyi/space/calculator/?c=320,16,1.125,1200,20,1.333,6,1,&s=0.75,1.5%7C2%7C3%7C4%7C5,m-2xl%7Cs-3xl */
   --space-2xs: clamp(0.5rem, calc(0.45rem + 0.23vw), 0.63rem);
@@ -35,7 +46,7 @@
 
   --border-thin: 0.5px;
   --border-thick: 4px;
-  --border-width: var(--border-thick);
+  --border-width: var(--border-thin);
 
   --controls-minimum-height: 46px;
 
