--- a/src/_includes/layouts/nested-article-layout.njk
+++ b/src/_includes/layouts/nested-article-layout.njk
@@ -1,7 +1,7 @@
 {% extends "layouts/base-layout.njk" %}
 {% block content %}
     {% include "partials/site-breadcrumbs.njk" %}
-    <article data-layout="stack" data-props="space:l">
+    <article class="measured-container" data-layout="stack" data-props="space:l">
         {{ content | safe }}
     </article>
 {% endblock %}
