--- a/src/_includes/partials/site-footer.njk
+++ b/src/_includes/partials/site-footer.njk
@@ -1,4 +1,4 @@
-<footer class="measured-container" data-layout="stack" data-props="x:start space:m">
+<footer data-layout="stack" data-props="x:start space:m">
     <hr/>
     <nav>
         <h2 class="visually-hidden" data-heading="6">Other links</h2>
