--- a/src/_includes/partials/story-card-entry.njk
+++ b/src/_includes/partials/story-card-entry.njk
@@ -1,10 +1,10 @@
-<li data-props="noMeasure">
-    <article itemscope="itemscope" itemtype="http://schema.org/Article">
+<li>
+    <article>
         <a itemprop="url" data-button="link" href="/{{ entry.slug }}">
             {{ entry.name }}</a>
         {# <p>
                     <time itemprop="dateModified" datetime="{{ story.edited }}">{{entry.edited | readableDate}}</time>
                 </p> #}
-        <meta itemprop="headline" content="{{ entry.name }}"/>
+        <p>{{entry.description}}</p>
     </article>
 </li>
