--- a/src/assets/styles/_globals.css
+++ b/src/assets/styles/_globals.css
@@ -20,8 +20,14 @@ h5,
 h6 {
   --measure: 40ch;
   line-height: 1.2;
-  font-weight: normal;
   font-family: var(--font-sans-serif);
+  
+}
+h3,
+h4,
+h5,
+h6 {
+  font-weight: normal;
 
 }
 h1,
