--- a/src/content/home-page.njk
+++ b/src/content/home-page.njk
@@ -6,13 +6,14 @@ pagination:
     data: collections.categoriesAndAll
     size: 1
     alias: currentCategory
+    addAllPagesToCollections: true
 permalink: "{% if currentCategory == 'All'%}/{% else %}/{{currentCategory | slugify}}/index.html{% endif %}"
 eleventyComputed:
     title: "Home - {{currentCategory}} | Frontend Stories"
     description: "{{meta.site_description}} Home - {{currentCategory}}"
     eleventyNavigation:
-        key: Home
-        title: Back to home
+        key: "{{currentCategory}}"
+        title: "Back to {{currentCategory}}"
 ---
 
 {# <hgroup class="visually-hidden" data-layout="slice">
