--- a/src/content/story-page.njk
+++ b/src/content/story-page.njk
@@ -18,7 +18,6 @@ eleventyComputed:
         title: "{{story.name}}"
         parent: "{{story.category.name}}"
 ---
-
 {% extends "layouts/story-layout.njk" %}
 {% set story_contribution_url = contribute.tally_url+"?slugs="+story.slugs+"&title="+story.name+"&category="+story.category.name %}
 {% block article %}
@@ -29,23 +28,28 @@ eleventyComputed:
             {% endif %}
             {{ story.name }}
         </h1>
-        <div data-layout="switcher box">
+        {# <div data-layout="switcher box">
             <p>
                 <span aria-hidden="true" data-font="emoji">📁</span>
                 Filed under:
-                <a href="/categories/{{ story.category.name | slugify }}" data-button="link">{{ story.category.name }}</a>
+                <a href="/{{ story.category.name | slugify }}" data-button="link">{{ story.category.name }}</a>
             </p>
-            {# <p>
+            <p>
                 <span aria-hidden="true" data-font="emoji">📅</span>
                 Created on:
                 <time itemprop="datePublished" datetime="{{ story.created }}">{{ story.created | readableDate }}</time>
-            </p> #}
+            </p>
             <p>
                 <span aria-hidden="true" data-font="emoji">✍</span>
                 Edited on:
                 <time itemprop="dateModified" datetime="{{ story.edited }}">{{ story.edited | readableDate }}</time>
             </p>
-        </div>
+        </div> #}
+        <p>
+                <span aria-hidden="true" data-font="emoji">✍</span>
+                Edited on:
+                <time itemprop="dateModified" datetime="{{ story.edited }}">{{ story.edited | readableDate }}</time>
+            </p>
         <link itemprop="thumbnailUrl" href="{{ thumbnail }}"/> {% set type = story.type.name %} <meta itemprop="description" content="{{ story.excerpt }}"/>
         <meta itemprop="teaches" content="{{ story.category.name }}"/>
     </header>
