feat: New design

--- a/src/_includes/layouts/base-layout.njk
+++ b/src/_includes/layouts/base-layout.njk
@@ -8,6 +8,6 @@
                 {{ content | safe }}
             {% endblock %}
         </main>
-        {% include "partials/site-footer.njk" %}
+        {# {% include "partials/site-footer.njk" %} #}
     </body>
 </html>
