--- a/src/_includes/partials/site-header.njk
+++ b/src/_includes/partials/site-header.njk
@@ -2,4 +2,7 @@
     <a data-font="sans-serif" data-props="y:center" data-button="text" href="/">
         <span>{{ meta.site_name }}</span>
     </a>
+    {# {% include "partials/site-breadcrumbs.njk" %} #}
+
+    <a data-font="sans-serif" data-button="text" href="/about">About</a>
 </header>
