--- a/src/assets/styles/_fonts.css
+++ b/src/assets/styles/_fonts.css
@@ -18,31 +18,8 @@
     /* Chrome 36+, Opera 23+, Firefox 39+ */
       url("../assets/fonts/literata-v30-latin-700.woff") format("woff"); /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
-/* ibm-plex-sans-condensed-regular - latin */
-@font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: "IBM Plex Sans Condensed";
-  font-style: normal;
-  font-weight: 400;
-  src: url("../assets/fonts/ibm-plex-sans-condensed-v13-latin-regular.woff2")
-      format("woff2"),
-    /* Chrome 36+, Opera 23+, Firefox 39+ */
-      url("../assets/fonts/ibm-plex-sans-condensed-v13-latin-regular.woff")
-      format("woff"); /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
-/* ibm-plex-sans-condensed-700 - latin */
-@font-face {
-  font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
-  font-family: "IBM Plex Sans Condensed";
-  font-style: normal;
-  font-weight: 700;
-  src: url("../assets/fonts/ibm-plex-sans-condensed-v13-latin-700.woff2")
-      format("woff2"),
-    /* Chrome 36+, Opera 23+, Firefox 39+ */
-      url("../assets/fonts/ibm-plex-sans-condensed-v13-latin-700.woff") format("woff"); /* Chrome 5+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
 :root {
-  --font-sans-serif: "IBM Plex Sans Condensed", "-apple-system",
+  --font-sans-serif: "-apple-system",
     "BlinkMacSystemFont", "avenir next", "avenir", "segoe ui", "helvetica neue",
     "helvetica", "Cantarell", "Ubuntu", "roboto", "noto", arial, sans-serif;
   --font-serif: "Literata", "Georgia", "Apple Garamond", "Times New Roman",
